// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`equipment sprite roundtrip should describe the packed sheet 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Read dds file <sandbox>/repacked.dds",
    "File size: 8032 (7.84 KB)",
    "Metadata size: 128",
    "Data size: 7904 (7.72 KB)",
    "Size: 152 x 52",
    "Mipmap: 1 - 16",
    "Linear size: 7904",
    "Block size: 16",
    "D3D format: DXT5",
  ],
}
`;

exports[`equipment sprite roundtrip should pack the icons back into a sheet 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Starting packing the equipment sprite, parallel",
    "System ltx: <resources>/gamedata/configs/system.ltx",
    "Source icons dir: <sandbox>/icons",
    "Output dir: <sandbox>/repacked.dds",
    "Packed 4 icons in BC3RgbaUnorm format",
    "Saved the packed equipment sprite <sandbox>/repacked.dds",
  ],
}
`;

exports[`equipment sprite roundtrip should report the sliced icons and repacked sheet as readable documents 1`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "unpack-equipment",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "declaredMipmapLevels": null,
    "destination": "<sandbox>/icons",
    "format": "DXT5",
    "height": 64,
    "source": "<resources>/gamedata/textures/ui/ui_test_sheet.dds",
    "systemLtx": "<resources>/gamedata/configs/system.ltx",
    "width": 256,
  },
}
`;

exports[`equipment sprite roundtrip should report the sliced icons and repacked sheet as readable documents 2`] = `
{
  "build": {
    "builtAt": "<build>",
    "commit": "<build>",
    "isDirty": "<build>",
    "kind": "<build>",
    "optimization": "<build>",
    "profile": "<build>",
    "reference": "<build>",
    "runId": "<build>",
    "rustc": "<build>",
    "target": "<build>",
    "version": "<build>",
  },
  "command": [
    "sprite",
    "pack-equipment",
  ],
  "duration": "<duration>",
  "error": null,
  "execution": {
    "origin": "auto",
    "workers": "<workers>",
  },
  "exitCode": 0,
  "outcome": "success",
  "result": {
    "duration": "<duration>",
    "outcome": "completed",
    "packedCount": 4,
    "savedAt": "<sandbox>/repacked.dds",
    "savedHeight": 52,
    "savedWidth": 152,
    "skippedCount": 0,
  },
}
`;

exports[`equipment sprite roundtrip should unpack only the opted-in icons 1`] = `
{
  "exitCode": 0,
  "stderr": [],
  "stdout": [
    "Opening DDS file: <resources>/gamedata/textures/ui/ui_test_sheet.dds",
    "Source DDS file details: 256x64, mip-maps: 0, format: None",
    "Unpacking the equipment sprite into: <sandbox>/icons",
    "Unpacked 4 icons",
    "Unpacked the equipment sprite into icons named by its LTX sections",
  ],
}
`;

exports[`equipment sprite roundtrip should write the expected files 1`] = `
[
  {
    "path": "icons/test_icon_a.dds",
    "sha256": "aa9b7d4a193862807b616041fe6eccaf3808baf14e87b75c555e9b433b61df20",
    "size": 2832,
  },
  {
    "path": "icons/test_icon_b.dds",
    "sha256": "9260d2d9cf41fbedb6e5875ed398e9663c8c07cc09e7411be2e9b19824a2628d",
    "size": 2832,
  },
  {
    "path": "icons/test_icon_c.dds",
    "sha256": "e7c5f367251456cb8358436a8b8ae6537eeff98280b9f64b468425ed314809b8",
    "size": 2832,
  },
  {
    "path": "icons/test_icon_c_variant.dds",
    "sha256": "e7c5f367251456cb8358436a8b8ae6537eeff98280b9f64b468425ed314809b8",
    "size": 2832,
  },
  {
    "path": "pack.json",
    "sha256": "f5618a7885313346badc75f85679424f1e0a376fe63b699f8aadd7d4b49782a2",
    "size": 723,
  },
  {
    "path": "repacked.dds",
    "sha256": "3ccdcd2f962bcf72f5f09410e938ca348983f58eaf68a1d550ef6943f2f58d9a",
    "size": 8032,
  },
  {
    "path": "unpack.json",
    "sha256": "7870f18dd309148ffc68747f083f7d3f9e5a2153d7de2b21d6674ec03bc62721",
    "size": 793,
  },
]
`;
